--- a/package.json
+++ b/package.json
@@ -29,5 +29,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dineshkumaark/nlk-mrkt.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dineshkumaark/nlk-mrkt/issues"
+  },
+  "homepage": "https://github.com/dineshkumaark/nlk-mrkt#readme"
 }
